Added style to main div

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a href="#">Go to home page</a>
     </div>
 
-    <div id="main">
+    <div id="main" style="text-align: center">
       <p>This is a test rep</p>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium,
