Changed Title Student B

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>we are in dev danger</title>
+    <title>Tunak tunak tunak Student B</title>
   </head>
 
   <body>
@@ -18,9 +18,7 @@
       <p>This is a test rep</p>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium,
-        sed.
-
-        Akshada is testing this.
+        sed. Akshada is testing this.
       </p>
 
       <!-- TODO - ADD MORE CONTENT -->
